@@ -37,9 +37,9 @@ public class ExtJavaService extends HttpServlet {
 
     @Override
     public void doPost(HttpServletRequest request, HttpServletResponse response) throws IOException, ServletException {
-        SampleResponseObject sro = (SampleResponseObject) Init.proxy_server.processCall(new SampleRequestObject(new Double(request.getParameter("X")),
-                new Double(request.getParameter("Y")),
-                new Long(request.getParameter("WAIT"))));
+        SampleResponseObject sro = (SampleResponseObject) Init.proxy_server.processCall(new SampleRequestObject(Double.valueOf(request.getParameter("X")),
+                Double.valueOf(request.getParameter("Y")),
+                Long.valueOf(request.getParameter("WAIT"))));
         response.setContentType("text/plain");
         response.setHeader("Pragma", "No-Cache");
         response.setDateHeader("EXPIRES", 0);
